Fix: mobile layout alignment break

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Adamina&family=Bungee&family=Poppins&family=Roboto+Mono&display=swap');
 
+html {
+  box-sizing: border-box;
+}
 body {
   background-color: #f3f3f3;
 }
@@ -14,7 +17,6 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  text-align: center;
   max-height: 100px;
   background-image: linear-gradient(
     to right,
@@ -41,7 +43,6 @@ nav {
   align-items: center;
   text-align: center;
   width: 100%;
-  border-bottom: 1px solid #eee;
   margin-left: 30px;
 }
 
